[metadata]
name = python-openlavaserver
version = 1.0.0
author = Qiang Chen

long_description = file: README.md
long_description_content_type = text/markdown
keywords = openlava
desciption-file = README.md

packages = find:

classifier = 
    Environment :: OpenLava
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3

install_requires = 
    file: requirements.txt

[files]
packages = 
    openlavaserver

[entry_points]
console_scripts = 
    openlava = openlavaserver.main:main
